--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <head>
     <title>Charli</title>
     <link rel="stylesheet" href="styles.css" type="text/css">
+    <link rel = "icon" href =  
+"https://static.wikia.nocookie.net/logopedia/images/1/11/385241377554a1fc83c43409d335ccdd-1.png" 
+        type = "image/x-icon">
   </head>
 
   <body>
