add youtube link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="logo">Charli XCX</div>
         <div class="nav">
           <div><a href="#music">Music</a></div>
-          <div><a href="#">Social</a></div>
+          <div><a href="#social">Social</a></div>
         </div>
         <div class="bio">Charlotte Emma Aitchison, known professionally as Charli XCX, is an English singer, songwriter, and music video director. </div>
       </div>
@@ -188,7 +188,7 @@
       <div id="social">
         <a href="https://www.instagram.com/charli_xcx/?hl=en" class="insta"><img src="https://www.flaticon.com/svg/vstatic/svg/1419/1419647.svg?token=exp=1616339885~hmac=6615654567308797f34b0ee45f542d94" alt="instagram logo"></a>
         <a href="https://twitter.com/charli_xcx?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="twitter"><img src="https://image.flaticon.com/icons/png/512/60/60580.png" alt="twitter logo"></a>
-        <a href="" class="youtube"><img src="https://www.flaticon.com/svg/vstatic/svg/1384/1384028.svg?token=exp=1616339946~hmac=4184074f93bd8936a59e17d693552a99" alt="youtube logo"></a>
+        <a href="https://www.youtube.com/user/officialcharlixcx" class="youtube"><img src="https://www.flaticon.com/svg/vstatic/svg/1384/1384028.svg?token=exp=1616339946~hmac=4184074f93bd8936a59e17d693552a99" alt="youtube logo"></a>
       </div>
     </div>
     <script src="main.js"></script>
